Fix layout bugs on mobile

--- a/_sass/components/_jump_links.scss
+++ b/_sass/components/_jump_links.scss
@@ -8,6 +8,12 @@
   padding: 1.5rem 0;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+
+
+  @include media-breakpoint-down(sm) {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 .jump-link.jump-link-process {
